<resources>
    <string name="app_name">Project_HidalgoRomero_Macaraig_Rehan</string>
    <string name="select">Please Select an Option:</string>
    <string name="enter_new_record">Enter New Record</string>
    <string name="previous_records">Display Previous Records</string>
    <string name="logout">Log Out</string>
    <string name="submit">Submit</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep">Keep Me Logged In</string>
    <string name="new_record">New Record</string>
    <string name="student_id">Student ID</string>
    <string name="score">Score</string>
    <string name="comments">Comments</string>
    <string name="back">Back to Main Page</string>
    <string name="save_record">Save Record</string>
    <string name="all_records">All Records</string>
    <string name="edit_record">Edit Record</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
</resources>
